--- a/docs/spec/components/schemas/EmployeeUpdate.yaml
+++ b/docs/spec/components/schemas/EmployeeUpdate.yaml
@@ -16,18 +16,9 @@ properties:
         enum: [ distributor_employee_update ]
       attributes:
         type: object
+        required:
+          - role
         properties:
-          email:
+          role:
             type: string
-            format: email
-            description: "User email"
-          password:
-            type: string
-            description: "New user password"
-          distributor_id:
-            type: string
-            description: "Distributor ID"
-          created_at:
-            type: string
-            format: date-time
-            description: "Creation date"
+            description: "User role"
